--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/Rufat00/My-React-Template"
     },
     "author": "Rufat",
     "license": "The Unlicense",
