--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "autoprefixer": "^10.4.7",
         "babel-loader": "^8.2.5",
         "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^11.0.0",
         "cross-env": "^7.0.3",
         "css-loader": "^6.7.1",
         "cssnano": "^5.1.11",
@@ -45,6 +46,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.30.0",
         "html-webpack-plugin": "^5.5.0",
+        "husky": "^8.0.0",
         "mini-css-extract-plugin": "^2.6.0",
         "postcss": "^8.4.14",
         "postcss-loader": "^7.0.0",
@@ -56,7 +58,6 @@
         "typescript": "^4.7.3",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.9.1",
-        "husky": "^8.0.0"
+        "webpack-dev-server": "^4.9.1"
     }
 }
